--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.15.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 diffusers==0.9.0
@@ -8,11 +9,13 @@ importlib-metadata==5.1.0
 numpy==1.23.5
 packaging==21.3
 Pillow==9.3.0
+psutil==5.9.4
 pyparsing==3.0.9
 PyYAML==6.0
 regex==2022.10.31
 requests==2.28.1
 tokenizers==0.13.2
+torch==1.13.0
 tqdm==4.64.1
 transformers==4.24.0
 typing_extensions==4.4.0
