--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 accelerate==0.15.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+commonmark==0.9.1
 diffusers==0.9.0
 filelock==3.8.0
 huggingface-hub==0.11.1
@@ -10,10 +11,12 @@ numpy==1.23.5
 packaging==21.3
 Pillow==9.3.0
 psutil==5.9.4
+Pygments==2.13.0
 pyparsing==3.0.9
 PyYAML==6.0
 regex==2022.10.31
 requests==2.28.1
+rich==12.6.0
 tokenizers==0.13.2
 torch==1.13.0
 tqdm==4.64.1
