--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Pillow==9.3.0
 psutil==5.9.4
 Pygments==2.13.0
 pyparsing==3.0.9
+python-dotenv==0.21.0
 PyYAML==6.0
 regex==2022.10.31
 requests==2.28.1
