allow user to automatically run magic prompt

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 NUM_IMAGES_PER_PROMPT = 1
 SAVE_OUTPUT = True
+
 HEIGHT = 512
 WIDTH = 512
 NUM_INFERENCE_STEPS = 1
+
 ALLOW_NSFW = False
+ENHANCE_PROMPT = True
